# rave_vst

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yaml
cmake/: add_torch.cmake  compiler_settings.cmake
source/: CMakeLists.txt  CircularBuffer.h  EngineUpdater.cpp  EngineUpdater.h  PluginEditor.cpp  PluginEditor.h  PluginEditorNetworking.cpp  PluginProcessor.cpp  PluginProcessor.h  PluginProcessorMisc.cpp  PluginProcessorProcessing.cpp  Rave.h
source/ui/: CompressorPanel.h  FoldablePanel.h  GUI_GLOBALS.h  Header.h  InputPanel.h  ModelExplorer.h  ModelPanel.h  MyLookAndFeel.h  OutputPanel.h  SliderGroup.h
source/ui/components/: CompressorPanel.h  SliderGroup.h  VuMeter.h
